--- a/index.ipynb
+++ b/index.ipynb
@@ -241,6 +241,8 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "type": "scatter",
+         "uid": "75d3d944-0e0e-11e9-b068-4586e13af626",
          "x": [
           4,
           1,
@@ -262,10 +264,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"7ced2553-80d5-423b-8431-769638f32d3f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7ced2553-80d5-423b-8431-769638f32d3f\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"aa2c5813-9470-4775-898c-f6d399d9fbbb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"aa2c5813-9470-4775-898c-f6d399d9fbbb\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"7606b710-0e0e-11e9-b068-4586e13af626\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"7ced2553-80d5-423b-8431-769638f32d3f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7ced2553-80d5-423b-8431-769638f32d3f\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"aa2c5813-9470-4775-898c-f6d399d9fbbb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"aa2c5813-9470-4775-898c-f6d399d9fbbb\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"7606b710-0e0e-11e9-b068-4586e13af626\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
